Fix the overflow on the primary tabs

--- a/modules/system/assets/ui/less/tab.less
+++ b/modules/system/assets/ui/less/tab.less
@@ -250,7 +250,7 @@
                 position: absolute;
                 bottom: 0;
                 height: 1px;
-                width: 100%;
+                width: 100vw;
                 z-index: @zindex-tab - 1;
                 content: ' ';
                 border-bottom: 2px solid @color-tab-active-border;
